--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,1 +1,1 @@
-TSOC_GROVEY_FOUR : thingSoC Cypress PsoC4 for Seeed Grove System
+TSOC_CYBLE : thingSoC adapter board for the Cypress CYBLE022-001 Module
